@@ -245,10 +245,10 @@ profile_container::select_filename(double threshold) const
 	// now sort the file_by_samples entry.
 	sort(file_by_samples.begin(), file_by_samples.end());
 
-	vector<filename_by_samples>::const_iterator cit
-		= file_by_samples.begin();
-	vector<filename_by_samples>::const_iterator const cend
-		= file_by_samples.end();
+	vector<filename_by_samples>::const_reverse_iterator cit
+		= file_by_samples.rbegin();
+	vector<filename_by_samples>::const_reverse_iterator const cend
+		= file_by_samples.rend();
 
 	vector<debug_name_id> result;
 	for (; cit != cend; ++cit) {
