@@ -1,3 +1,8 @@
+2003-06-07  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* libpp/profile_container.cpp: fix order of file output with opannoate
+	--source to be consistent with other tools
+
 2003-06-07  John Levon  <levon@movementarian.org>
 
 	* libpp/profile_container.cpp: fix operator<
